tests/snapshots/cli_json__snapshot_json_upload_success.snap
---
source: tests/cli_json.rs
expression: normalize_json(&output.stdout)
---
{
  "bytes": 5,
  "lifetime": 100,
  "status": "ok",
  "url": "<URL>",
  "verified": null
}
