tests/snapshots/cli_json__snapshot_rgfile_help.snap
---
source: tests/cli_json.rs
expression: normalize_help(&output.stdout)
---
Upload and download GigaFile public web files

Usage: rgfile [OPTIONS] <COMMAND>

Commands:
  download     Download a file from a public GigaFile page [aliases: dl]
  info         Show metadata for a public GigaFile page without downloading files
  upload       Upload a local file [aliases: ul]
  history      Inspect or clear local history
  config       Inspect or create the rgfile configuration file
  self-update  Update this rgfile binary from the latest GitHub Release
  completions  Generate shell completion scripts
  help         Print this message or the help of the given subcommand(s)

Options:
  -h, --help     Print help
  -V, --version  Print version

Global Options:
  -v, --verbose...     Increase logging verbosity (-v for info, -vv for debug)
      --config <PATH>  Load configuration from a specific TOML file
      --no-config      Do not load a configuration file
      --history        Enable history for this run
      --no-history     Disable history for this run
